--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -3,6 +3,6 @@
 # Ansible managed
 #
 repository:
-  description: Firefox
+  description: Firefox Installation.
   homepage: https://buluma.github.io/
   topics: firefox, mozilla, webbrowser, ansible, molecule, tox, playbook, hacktoberfest
