--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,53 +11,45 @@
       paths:
         - vars
 
-# - name: debian vars
-#  include_vars: Debian.yml
-#  when: ansible_os_family == 'Debian'
-#
-# - name: redhat vars
-#  include_vars: RedHat.yml
-#  when: ansible_os_family == 'RedHat'
-
 - name: download firefox package
-  get_url:
+  ansible.builtin.get_url:
     url: "{{ firefox_url }}"
     dest: /tmp/firefox-{{ firefox_version }}.tar.bz2
     checksum: "{{ firefox_checksum }}"
 
 - block:
     - name: remove the firefox package
-      package:
+      ansible.builtin.package:
         name: firefox
         state: absent
 
     - name: install dependencies
-      package:
+      ansible.builtin.package:
         name: "{{ item }}"
       with_items: "{{ firefox_dependencies }}"
 
     - name: create install directory
-      file:
+      ansible.builtin.file:
         path: "{{ firefox_home }}"
         state: directory
         mode: 0755
 
     - name: unarchive package
-      unarchive:
+      ansible.builtin.unarchive:
         src: "{{ firefox_download }}"
         dest: "{{ firefox_home }}"
         remote_src: true
         creates: "{{ firefox_bin }}"
 
     - name: symlink package
-      file:
+      ansible.builtin.file:
         src: "{{ firefox_bin }}"
         dest: /usr/bin/firefox
         state: link
   become: true
 
 - name: create desktop icon
-  template:
+  ansible.builtin.template:
     src: firefox.desktop.j2
     dest: /usr/share/applications/firefox.desktop
     owner: root
