--- a/.github/workflows/gitlab_trigger.yml
+++ b/.github/workflows/gitlab_trigger.yml
@@ -27,9 +27,8 @@ jobs:
         env:
           GITLAB_HOSTNAME: "gitlab.com"
           GITLAB_USERNAME: "buluma"
-
           GITLAB_PASSWORD: ${{ secrets.GITLAB_PASSWORD }}
-          GITLAB_PROJECT_ID: "3340722x"
+          GITLAB_PROJECT_ID: "firefox"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Slack Notification
         uses: act10ns/slack@v1
