--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -39,7 +39,19 @@ jobs:
           - image: "enterpriselinux"
             tag: "7"
           - image: "docker-ubuntu-systemd"
+            tag: "latest"
+          - image: "docker-ubuntu-systemd"
             tag: "bionic"
+          - image: "docker-ubuntu-systemd"
+            tag: "focal"
+          - image: "debian-systemd"
+            tag: "latest"
+          - image: "debian-systemd"
+            tag: "bookworm"
+          - image: "fedora-systemd"
+            tag: "34"
+          - image: "fedora-systemd"
+            tag: "latest"
     steps:
       - name: checkout
         uses: actions/checkout@v3
