--- a/meta/main.yml
+++ b/meta/main.yml
@@ -14,7 +14,13 @@ galaxy_info:
         - 7
     - name: Ubuntu
       versions:
-        - bionic
+        - all
+    - name: Debian
+      versions:
+        - all
+    - name: Fedora
+      versions:
+        - all
   galaxy_tags:
     - firefox
     - mozilla
