--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -10,7 +10,7 @@ on:
   schedule:
     - cron: '11 6 * * *'
   workflow_dispatch:
-  push: {branches: ["master", "main", "testing"]}
+  push: {branches: ["master", "main"]}
 
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
@@ -44,12 +44,16 @@ jobs:
             tag: "bionic"
           - image: "docker-ubuntu-systemd"
             tag: "focal"
+          - image: "docker-ubuntu-systemd"
+            tag: "jammy"
           - image: "debian-systemd"
             tag: "latest"
           - image: "debian-systemd"
             tag: "bookworm"
           - image: "fedora-systemd"
             tag: "34"
+          - image: "fedora-systemd"
+            tag: "35"
           - image: "fedora-systemd"
             tag: "latest"
     steps:
