--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: include distribution specific variables
+- name: Include distribution specific variables
   ansible.builtin.include_vars: "{{ lookup('first_found', params) }}"
   vars:
     params:
@@ -11,7 +11,7 @@
       paths:
         - vars
 
-- name: download firefox package
+- name: Download firefox package
   ansible.builtin.get_url:
     url: "{{ firefox_url }}"
     dest: /tmp/firefox-{{ firefox_version }}.tar.bz2
@@ -19,37 +19,37 @@
     checksum: "{{ firefox_checksum }}"
 
 - block:
-    - name: remove the firefox package
+    - name: Remove the firefox package
       ansible.builtin.package:
         name: firefox
         state: absent
 
-    - name: install dependencies
+    - name: Install dependencies
       ansible.builtin.package:
         name: "{{ item }}"
       with_items: "{{ firefox_dependencies }}"
 
-    - name: create install directory
+    - name: Create install directory
       ansible.builtin.file:
         path: "{{ firefox_home }}"
         state: directory
         mode: 0755
 
-    - name: unarchive package
+    - name: Unarchive package
       ansible.builtin.unarchive:
         src: "{{ firefox_download }}"
         dest: "{{ firefox_home }}"
         remote_src: true
         creates: "{{ firefox_bin }}"
 
-    - name: symlink package
+    - name: Symlink package
       ansible.builtin.file:
         src: "{{ firefox_bin }}"
         dest: /usr/bin/firefox
         state: link
   become: true
 
-- name: create desktop icon
+- name: Create desktop icon
   ansible.builtin.template:
     src: firefox.desktop.j2
     dest: /usr/share/applications/firefox.desktop
