--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           path: "${{ github.repository }}"
       - name: molecule
-        uses: buluma/molecule-action@v4.0.7
+        uses: buluma/molecule-action@v5.0.1
         with:
           command: lint
   test:
@@ -49,7 +49,7 @@ jobs:
           - image: "debian-systemd"
             tag: "latest"
           - image: "debian-systemd"
-            tag: "bookworm"
+            tag: "buster"
           - image: "fedora-systemd"
             tag: "34"
           - image: "fedora-systemd"
@@ -66,7 +66,7 @@ jobs:
       - name: parse apparmor for mysql
         run: sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
       - name: molecule
-        uses: buluma/molecule-action@v4.0.7
+        uses: buluma/molecule-action@v5.0.1
         with:
           image: ${{ matrix.config.image }}
           tag: ${{ matrix.config.tag }}
