--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -5,6 +5,6 @@
   gather_facts: true
 
   tasks:
-    - name: check firefox version installed
+    - name: Check firefox version installed
       ansible.builtin.debug:
         msg: "Installed firefox version successfully!"
