--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,17 +1,14 @@
 ---
-dependencies: []
-
 galaxy_info:
-  author: Michael Buluma
+  author: buluma
   role_name: firefox
-  namespace: buluma
   description: Firefox Installation.
   license: Apache-2.0
-  min_ansible_version: 2.10
+  min_ansible_version: "2.12"
   platforms:
     - name: EL
       versions:
-        - 7
+        - "7"
     - name: Ubuntu
       versions:
         - all
@@ -25,3 +22,4 @@ galaxy_info:
     - firefox
     - mozilla
     - webbrowser
+dependencies: []
