--- a/tasks/tarball.yml
+++ b/tasks/tarball.yml
@@ -3,7 +3,7 @@
   ansible.builtin.get_url:
     url: "{{ firefox_url }}"
     dest: /tmp/firefox-{{ firefox_version }}.tar.bz2
-    mode: 0755
+    mode: "0755"
     checksum: "{{ firefox_checksum }}"
 
 - name: Install firefox
@@ -23,7 +23,7 @@
       ansible.builtin.file:
         path: "{{ firefox_home }}"
         state: directory
-        mode: 0755
+        mode: "0755"
 
     - name: Unarchive package
       ansible.builtin.unarchive:
@@ -44,5 +44,5 @@
     dest: /usr/share/applications/firefox.desktop
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
   when: firefox_desktop_icon
