--- a/tasks/tarball.yml
+++ b/tasks/tarball.yml
@@ -1,44 +1,44 @@
 ---
-- name: Download firefox package
+- name: tarball | Download firefox package
   ansible.builtin.get_url:
     url: "{{ firefox_url }}"
     dest: /tmp/firefox-{{ firefox_version }}.tar.bz2
     mode: "0755"
     checksum: "{{ firefox_checksum }}"
 
-- name: Install firefox
+- name: tarball | Install firefox
   become: true
   block:
-    - name: Remove the firefox package
+    - name: tarball | Remove the firefox package
       ansible.builtin.package:
         name: firefox
         state: absent
 
-    - name: Install dependencies
+    - name: tarball | Install dependencies
       ansible.builtin.package:
         name: "{{ item }}"
       with_items: "{{ firefox_dependencies }}"
 
-    - name: Create install directory
+    - name: tarball | Create install directory
       ansible.builtin.file:
         path: "{{ firefox_home }}"
         state: directory
         mode: "0755"
 
-    - name: Unarchive package
+    - name: tarball | Unarchive package
       ansible.builtin.unarchive:
         src: "{{ firefox_download }}"
         dest: "{{ firefox_home }}"
         remote_src: true
         creates: "{{ firefox_bin }}"
 
-    - name: Symlink package
+    - name: tarball | Symlink package
       ansible.builtin.file:
         src: "{{ firefox_bin }}"
         dest: /usr/bin/firefox
         state: link
 
-- name: Create desktop icon
+- name: tarball | Create desktop icon
   ansible.builtin.template:
     src: firefox.desktop.j2
     dest: /usr/share/applications/firefox.desktop
