--- a/tasks/deb.yml
+++ b/tasks/deb.yml
@@ -1,16 +1,20 @@
 ---
 # Based on instructions at https://support.mozilla.org/en-US/kb/install-firefox-linux#w_install-firefox-deb-package-for-debian-based-distributions
+- name: Ensure the directory to store APT repository keys exists
+  ansible.builtin.file:
+    path: /etc/apt/keyrings
+    state: directory
+    mode: '0755'
 
 - name: deb | Get gpg key
   ansible.builtin.get_url:
-    url: https://packages.mozilla.org/apt/repo-signing-key.gpg
+    url: 'https://packages.mozilla.org/apt/repo-signing-key.gpg'
     dest: /etc/apt/keyrings/packages.mozilla.org.asc
     mode: '0644'
 
 - name: deb | Verify key fingerprint
   ansible.builtin.shell: |
-    set -o pipefail
-    gpg -n -q --import --import-options import-show /etc/apt/keyrings/packages.mozilla.org.asc | awk '/pub/{getline; gsub(/^ +| +$/,""); print $0}'
+    bash -c 'set -o pipefail; gpg -n -q --import --import-options import-show /etc/apt/keyrings/packages.mozilla.org.asc | awk "/pub/{getline; gsub(/^ +| +$/,\" \"); print $0}"'
   register: gpg
   changed_when: false
 
