--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,26 +1,25 @@
----
 galaxy_info:
   author: buluma
   role_name: firefox
   description: Firefox Installation.
   license: Apache-2.0
-  min_ansible_version: "2.12"
+  min_ansible_version: '2.12'
   platforms:
-    - name: EL
-      versions:
-        - "7"
-    - name: Ubuntu
-      versions:
-        - all
-    - name: Debian
-      versions:
-        - all
-    - name: Fedora
-      versions:
-        - all
+  - name: EL
+    versions:
+    - all
+  - name: Ubuntu
+    versions:
+    - all
+  - name: Debian
+    versions:
+    - all
+  - name: Fedora
+    versions:
+    - all
   galaxy_tags:
-    - firefox
-    - mozilla
-    - webbrowser
-    - system
+  - firefox
+  - mozilla
+  - webbrowser
+  - system
 dependencies: []
