--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,23 +4,23 @@ galaxy_info:
   role_name: firefox
   description: Firefox Installation.
   license: Apache-2.0
-  min_ansible_version: '2.12'
+  min_ansible_version: "2.12"
   platforms:
     - name: EL
       versions:
         - all
-  - name: Ubuntu
-    versions:
-    - all
-  - name: Debian
-    versions:
-    - all
-  - name: Fedora
-    versions:
-    - all
+    - name: Ubuntu
+      versions:
+        - all
+    - name: Debian
+      versions:
+        - all
+    - name: Fedora
+      versions:
+        - all
   galaxy_tags:
     - firefox
-  - mozilla
-  - webbrowser
-  - system
+    - mozilla
+    - webbrowser
+    - system
 dependencies: []
